[gd_scene load_steps=20 format=3 uid="uid://de0b1hu4sg3yl"]

[ext_resource type="Script" uid="uid://45nnrgg3ox3g" path="res://godot/entities/swordman.gd" id="1_vbe07"]
[ext_resource type="Resource" uid="uid://bf8r02dhl0de0" path="res://godot/resources/entity_stats.tres" id="2_om1ad"]
[ext_resource type="Script" uid="uid://v0a4dqqmx5n4" path="res://godot/entity_states/fall.gd" id="3_evd68"]
[ext_resource type="Script" uid="uid://7fo3alrakfvd" path="res://godot/components/ComponentManager.gd" id="3_gv3me"]
[ext_resource type="Script" uid="uid://cixd1pouthjgb" path="res://godot/entity_states/jump.gd" id="4_51q0t"]
[ext_resource type="Script" uid="uid://dwrm13e3n8nhh" path="res://godot/components/Idle.gd" id="4_gv3me"]
[ext_resource type="Script" uid="uid://dyvl8tfskrmsj" path="res://godot/components/HorizontalMovement.gd" id="5_nj2y7"]
[ext_resource type="Script" uid="uid://7o5olu2cdixv" path="res://godot/entity_states/ground.gd" id="5_u8luj"]
[ext_resource type="Script" uid="uid://64q1nkn1w84a" path="res://godot/components/Jumping.gd" id="6_iv3oh"]
[ext_resource type="Script" uid="uid://ckoreda8nbyhu" path="res://godot/entity_states/idle.gd" id="6_n8bs7"]
[ext_resource type="Script" uid="uid://dbewyqwsdssbo" path="res://godot/components/Falling.gd" id="7_7dk00"]
[ext_resource type="Script" uid="uid://dd2gnex14a7pu" path="res://godot/entity_states/move.gd" id="7_oqa5d"]
[ext_resource type="Script" uid="uid://dv4s4vyj67rgy" path="res://godot/entity_states/air.gd" id="8_6sbee"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="9_kqal7"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="10_mbafe"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="11_gv3me"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="12_k0l4j"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="18_iv3oh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qqr4"]
size = Vector2(40, 40)

[node name="Swordman" type="CharacterBody2D"]
script = ExtResource("1_vbe07")
stats = ExtResource("2_om1ad")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6qqr4")

[node name="ComponentManager" type="Node" parent="."]
script = ExtResource("3_gv3me")

[node name="Idle" type="Node" parent="ComponentManager" node_paths=PackedStringArray("chart")]
script = ExtResource("4_gv3me")
chart = NodePath("../../StateChart")

[node name="HorizontalMovement" type="Node" parent="ComponentManager"]
script = ExtResource("5_nj2y7")
metadata/_custom_type_script = "uid://7jh7cbfqkpb5"

[node name="Jumping" type="Node" parent="ComponentManager" node_paths=PackedStringArray("agent", "chart", "to_fall")]
script = ExtResource("6_iv3oh")
agent = NodePath("../..")
chart = NodePath("../../StateChart")
to_fall = NodePath("../../StateChart/Root/Movement/Grounded/Idle/fall")
metadata/_custom_type_script = "uid://7jh7cbfqkpb5"

[node name="Falling" type="Node" parent="ComponentManager"]
script = ExtResource("7_7dk00")
metadata/_custom_type_script = "uid://7jh7cbfqkpb5"

[node name="Air" type="LimboHSM" parent="."]

[node name="Fall" type="LimboState" parent="Air"]
script = ExtResource("3_evd68")

[node name="Jump" type="LimboState" parent="Air"]
script = ExtResource("4_51q0t")

[node name="Ground" type="LimboState" parent="Air"]
script = ExtResource("5_u8luj")

[node name="Ground" type="LimboHSM" parent="."]

[node name="Idle" type="LimboState" parent="Ground"]
script = ExtResource("6_n8bs7")

[node name="Move" type="LimboState" parent="Ground"]
script = ExtResource("7_oqa5d")

[node name="Air" type="LimboState" parent="Ground"]
script = ExtResource("8_6sbee")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("9_kqal7")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("10_mbafe")
metadata/_custom_type_script = "uid://c1vp0ojjvaby1"

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("10_mbafe")

[node name="Grounded" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("11_gv3me")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("12_k0l4j")

[node name="move_left" type="Node" parent="StateChart/Root/Movement/Grounded/Idle"]
script = ExtResource("18_iv3oh")
to = NodePath("../../Moving")
event = &"move_right"
delay_in_seconds = "0.0"

[node name="move_right" type="Node" parent="StateChart/Root/Movement/Grounded/Idle"]
script = ExtResource("18_iv3oh")
to = NodePath("../../Moving")
event = &"move_left"
delay_in_seconds = "0.0"

[node name="jump" type="Node" parent="StateChart/Root/Movement/Grounded/Idle"]
script = ExtResource("18_iv3oh")
to = NodePath("../../../Airborned/Jumping")
event = &"move_right"
delay_in_seconds = "0.0"

[node name="fall" type="Node" parent="StateChart/Root/Movement/Grounded/Idle"]
script = ExtResource("18_iv3oh")
to = NodePath("../../../Airborned/Falling")
event = &"move_right"
delay_in_seconds = "0.0"

[node name="Moving" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("12_k0l4j")

[node name="idle" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("18_iv3oh")
to = NodePath("../../Idle")
event = &"move_right"
delay_in_seconds = "0.0"

[node name="jump" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("18_iv3oh")
to = NodePath("../../../Airborned/Jumping")
event = &"move_right"
delay_in_seconds = "0.0"

[node name="to_nil_ground" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("18_iv3oh")
to = NodePath("../../NilGround")
event = &"move_right"
delay_in_seconds = "0.0"

[node name="NilGround" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("12_k0l4j")

[node name="Airborned" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("11_gv3me")
initial_state = NodePath("Falling")

[node name="Falling" type="Node" parent="StateChart/Root/Movement/Airborned"]
script = ExtResource("12_k0l4j")

[node name="idle" type="Node" parent="StateChart/Root/Movement/Airborned/Falling"]
script = ExtResource("18_iv3oh")
to = NodePath("../../../Grounded/Idle")
delay_in_seconds = "0.0"

[node name="Jumping" type="Node" parent="StateChart/Root/Movement/Airborned"]
script = ExtResource("12_k0l4j")

[node name="NilAir" type="Node" parent="StateChart/Root/Movement/Airborned"]
script = ExtResource("12_k0l4j")

[node name="Combat" type="Node" parent="StateChart/Root"]
script = ExtResource("10_mbafe")

[node name="Neutral" type="Node" parent="StateChart/Root/Combat"]
script = ExtResource("12_k0l4j")

[node name="Offensive" type="Node" parent="StateChart/Root/Combat"]
script = ExtResource("12_k0l4j")

[node name="Defensive" type="Node" parent="StateChart/Root/Combat"]
script = ExtResource("12_k0l4j")

[connection signal="state_entered" from="StateChart/Root/Movement/Grounded/Idle" to="ComponentManager/Idle" method="_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded/Idle" to="ComponentManager/Idle" method="_on_idle_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Airborned/Falling" to="ComponentManager/Falling" method="_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Airborned/Jumping" to="ComponentManager/Jumping" method="_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Airborned/Jumping" to="ComponentManager/Jumping" method="_physics_processing"]
